--- a/FrontEnd/src/style2.scss
+++ b/FrontEnd/src/style2.scss
@@ -3,8 +3,16 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import 'ag-grid-community/styles/ag-grid.css';
+@import 'ag-grid-community/styles/ag-theme-alpine.css';
 
-
+html, body {
+   height: 100%;
+   width: 100%;
+   padding: 5px;
+   box-sizing: border-box;
+   -webkit-overflow-scrolling: touch;
+}
 
 a, h1, h2, h3, h4, h5, button, div, img, p{
   font-family: 'Ubuntu', sans-serif;
