--- a/FrontEnd/src/app/details-teacher-exam-card/details-teacher-exam-card.component.html
+++ b/FrontEnd/src/app/details-teacher-exam-card/details-teacher-exam-card.component.html
@@ -17,6 +17,7 @@
               <button class="btn btn-dark"> {{remMinute}} </button> <b> : </b>
               <button class="btn btn-dark">{{remSecond}}</button>
             </div>
+            <app-conference></app-conference>
             <div *ngIf="hide">
               <button class="btn btn-light">{{remHour}}</button> <b> : </b>
               <button class="btn btn-light"> {{remMinute}} </button> <b> : </b>
