--- a/FrontEnd/src/app/call/components/call/call.component.scss
+++ b/FrontEnd/src/app/call/components/call/call.component.scss
@@ -8,7 +8,7 @@
     display: grid;
     grid-template-columns: auto auto;
     padding: 0.5rem;
-    background-color: #171b29;
+    background-color: #d3caaa;
     max-height: 100vh;
   }
 
