machine synch push

--- a/FrontEnd/src/app/student-exam/student-exam.component.html
+++ b/FrontEnd/src/app/student-exam/student-exam.component.html
@@ -41,6 +41,7 @@
         </div>
           <button class="btn btn-success" (click)="submitAnswer()">Submit Answer</button>
         </div>
+        <app-call></app-call>
 
         <div class="manual">
           <h4>GUIDELINES</h4>
