--- a/FrontEnd/src/app/call/components/call/call.component.html
+++ b/FrontEnd/src/app/call/components/call/call.component.html
@@ -4,10 +4,13 @@
         <app-video-player *ngIf="localStream"
                           [mode]="'owner'"
                           [stream]="localStream"
-                          class="my-video">
+                          class="my-video" hidden>
         </app-video-player>
-        <app-video-player *ngFor="let user of joinedUsers"
+        <div *ngIf="userDetails.isTeacher" >
+            <app-video-player *ngFor="let user of joinedUsers"
                           [stream]="user.stream">
-        </app-video-player>
+            </app-video-player>
+        </div>
+        
     </div>
 </div>
