--- a/FrontEnd/src/app/details-teacher-exam-card/details-teacher-exam-card.component.html
+++ b/FrontEnd/src/app/details-teacher-exam-card/details-teacher-exam-card.component.html
@@ -20,7 +20,7 @@
               <button class="btn btn-dark">{{ remMinute }}</button> <b> : </b>
               <button class="btn btn-dark">{{ remSecond }}</button>
             </div>
-            <app-conference></app-conference>
+            
             <div *ngIf="hide">
               <button class="btn btn-light">{{ remHour }}</button> <b> : </b>
               <button class="btn btn-light">{{ remMinute }}</button> <b> : </b>
@@ -77,8 +77,12 @@
               >
                 Table View
               </button>
+
+              <app-mcq-exam></app-mcq-exam>
+
             </div>
             <br />
+            <app-conference></app-conference>
           </div>
           <div class="col-6">
             <h2>Participant List&nbsp;&nbsp;<i class="fa fa-users"></i></h2>
