new question creation fixed, full marks field attached

--- a/FrontEnd/src/app/question-creation/questionTypes/text-question/text-question.component.html
+++ b/FrontEnd/src/app/question-creation/questionTypes/text-question/text-question.component.html
@@ -7,6 +7,10 @@
         <mat-label>Full Marks</mat-label>
       <input type="number" matInput formControlName="fullMarks" placeholder="Full Marks">
     </mat-form-field>
+    <mat-form-field appearance="outline">
+      <mat-label>Correct Answer</mat-label>
+      <input type="text" matInput formControlName="correctAnswer" placeholder="Correct Answer">
+  </mat-form-field>
 </form>
 
 <!-- <button (click)="check()">check</button> -->
