--- a/FrontEnd/src/app/question-creation/questionTypes/radio-question/radio-question.component.html
+++ b/FrontEnd/src/app/question-creation/questionTypes/radio-question/radio-question.component.html
@@ -21,6 +21,15 @@
     </div>
   
     <button mat-button type="button" (click)="addOption()">Add Option</button>
+
+    <mat-form-field appearance="outline">
+      <mat-label>Correct Answer</mat-label>
+      <mat-select formControlName="correctAnswer">
+        <mat-option *ngFor="let option of options.controls; let i = index" [value]="i">
+          {{ getOptionPrefix(i) }}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
   </form>
 
   <!-- <button (click)="check()">check</button> -->
