--- a/FrontEnd/src/app/question-creation/questionTypes/radio-question/radio-question.component.html
+++ b/FrontEnd/src/app/question-creation/questionTypes/radio-question/radio-question.component.html
@@ -1,4 +1,5 @@
 <form [formGroup]="questionForm">
+    {{index + 1}} .<br>
     <mat-form-field appearance="outline">
       <mat-label>Question</mat-label>
       <input matInput formControlName="question" placeholder="Question">
@@ -31,6 +32,8 @@
       </mat-select>
     </mat-form-field>
   </form>
+
+  <mat-icon (click)="deleteComponent()">delete</mat-icon>
 
   <!-- <button (click)="check()">check</button> -->
   
