--- a/FrontEnd/src/app/question-creation/questionTypes/text-question/text-question.component.html
+++ b/FrontEnd/src/app/question-creation/questionTypes/text-question/text-question.component.html
@@ -1,17 +1,18 @@
 <form [formGroup]="questionForm">
-    <mat-form-field appearance="outline">
-      <mat-label>Question</mat-label>
-      <input matInput formControlName="question" placeholder="Question">
-    </mat-form-field>
-    <mat-form-field appearance="outline">
-        <mat-label>Full Marks</mat-label>
-      <input type="number" matInput formControlName="fullMarks" placeholder="Full Marks">
-    </mat-form-field>
-    <mat-form-field appearance="outline">
-      <mat-label>Correct Answer</mat-label>
-      <input type="text" matInput formControlName="correctAnswer" placeholder="Correct Answer">
+  {{index + 1}} .<br>
+  <mat-form-field appearance="outline">
+    <mat-label>Question</mat-label>
+    <input matInput formControlName="question" placeholder="Question">
+  </mat-form-field>
+  <mat-form-field appearance="outline">
+    <mat-label>Full Marks</mat-label>
+    <input type="number" matInput formControlName="fullMarks" placeholder="Full Marks">
+  </mat-form-field>
+  <mat-form-field appearance="outline">
+    <mat-label>Correct Answer</mat-label>
+    <input type="text" matInput formControlName="correctAnswer" placeholder="Correct Answer">
   </mat-form-field>
 </form>
 
+<mat-icon (click)="deleteComponent()">delete</mat-icon>
 <!-- <button (click)="check()">check</button> -->
-  
