full marks of each question loaded

--- a/FrontEnd/src/app/mcq-exam/components/radio-question-field/radio-question-field.component.html
+++ b/FrontEnd/src/app/mcq-exam/components/radio-question-field/radio-question-field.component.html
@@ -2,7 +2,7 @@
 <div [formGroup]="questionForm">
     <div>
         <mat-label>
-            {{ question.question }}
+            {{ question.question }} - {{ question.fullMarks }}
         </mat-label>
         <mat-radio-group
             id="radiogroup"
