--- a/FrontEnd/src/app/mcq-exam/components/text-question-field/text-question-field.component.html
+++ b/FrontEnd/src/app/mcq-exam/components/text-question-field/text-question-field.component.html
@@ -3,7 +3,7 @@
 <div [formGroup]="questionForm">
     <mat-form-field>
         <mat-label>
-            {{ question.question }}
+            {{ question.question }} - {{ question.fullMarks }}
         </mat-label>
         <input
             matInput
