--- a/FrontEnd/src/app/mcq-exam/components/text-question-field/text-question-field.component.html
+++ b/FrontEnd/src/app/mcq-exam/components/text-question-field/text-question-field.component.html
@@ -1,6 +1,6 @@
 
 {{index+1}}.
-<div [formGroup]="questionForm">
+<div [formGroup]="questionForm" [ngClass]="{ 'correct-answer': status === STATUS.RIGHT, 'wrong-answer': status === STATUS.WRONG }">
     <mat-form-field>
         <mat-label>
             {{ question.question }} - {{ question.fullMarks }}
@@ -12,4 +12,8 @@
         />
         
     </mat-form-field>
+</div>
+
+<div *ngIf="status == STATUS.WRONG">
+    Correct answer is {{question.correctAnswer}}
 </div>
