--- a/FrontEnd/src/app/mcq-exam/mcq-question-wrapper/mcq-question-wrapper.component.html
+++ b/FrontEnd/src/app/mcq-exam/mcq-question-wrapper/mcq-question-wrapper.component.html
@@ -1,2 +1,7 @@
 <ng-template #questionHost questionHost></ng-template>
 <button (click)="check()">check</button>
+<div *ngIf="obtainedMarks">
+   <h1>
+    You got {{obtainedMarks}} out of {{totalMarks}}
+   </h1>
+</div>
