question answers populated with initial values

--- a/FrontEnd/src/app/mcq-exam/mcq-question-wrapper/mcq-question-wrapper.component.html
+++ b/FrontEnd/src/app/mcq-exam/mcq-question-wrapper/mcq-question-wrapper.component.html
@@ -1,5 +1,5 @@
 <ng-template #questionHost questionHost></ng-template>
-<button (click)="check()">check</button>
+<button (click)="save()">save</button>
 <div *ngIf="obtainedMarks">
    <h1>
     You got {{obtainedMarks}} out of {{totalMarks}}
